--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,9 @@
 }
 
 .container {
-    max-width: 1200px; /* i did changed here from 1200px to 80% */
+    /* position: relative; */
+    max-width: 1200px;
+    /* i did changed here from 1200px to 80% */
     margin: 0 auto;
 }
 
@@ -27,8 +29,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    height: fit-content;
     padding-top: 1rem;
+    position: relative;
 }
 
 
@@ -42,7 +45,7 @@
     width: 80px;
 }
 
-.nav-items {
+.menu {
     display: flex;
     gap: 2rem;
     padding: 0 4rem;
@@ -53,26 +56,113 @@
     font-size: 28px;
 }
 
-.nav-items div {
+.menu div {
     font-size: 20px;
     font-weight: 500;
-    cursor: pointer;
     
+
     /* text-decoration: none; */
 }
 
-.nav-items div a {
+.menu div a {
     /* transition: all 1s ease; */
     color: black;
+    cursor: pointer; 
 }
 
-.nav-items div:hover {
+.menu div a:hover {
     transition: 0.8s;
     font-weight: bold;
 }
-a{
+
+a {
     text-decoration: none;
 }
+
+
+
+/* ham */
+
+.menu {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.menu>div {
+    margin: 0 1rem;
+    overflow: hidden;
+}
+
+.menu-button-container {
+    display: none;
+    height: 100%;
+    width: 30px;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 12px;
+}
+
+#menu-toggle {
+    display: none;
+}
+
+.menu-button,
+.menu-button::before,
+.menu-button::after {
+    display: block;
+    background-color: #000;
+    /* position: absolute; */
+    height: 4px;
+    width: 30px;
+    transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    border-radius: 2px;
+}
+
+.menu-button::before {
+    content: '';
+    margin-top: -8px;
+}
+
+.menu-button::after {
+    content: '';
+    margin-top: 13px;
+}
+
+#menu-toggle:checked+.menu-button-container .menu-button::before {
+    margin-top: 0px;
+    transform: rotate(405deg);
+}
+
+#menu-toggle:checked+.menu-button-container .menu-button {
+    background: rgba(255, 255, 255, 0);
+}
+
+#menu-toggle:checked+.menu-button-container .menu-button::after {
+    margin-top: 0px;
+    transform: rotate(-405deg);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .introduction {
     display: flex;
@@ -90,7 +180,7 @@ a{
 .faded-text {
     user-select: none;
     font-size: 7em;
-    color: rgb(231,231,231);
+    color: rgb(231, 231, 231);
 
     bottom: -21%;
     left: -5%;
@@ -143,6 +233,7 @@ a{
     position: relative;
     z-index: 1;
 }
+
 .btn-pink::before {
     content: "";
     position: absolute;
@@ -156,9 +247,11 @@ a{
     transform-origin: left;
     transition: all 0.8s;
 }
+
 .btn-pink:hover::before {
     transform: scaleX(1);
 }
+
 .btn-pink:hover {
     border: solid 3px var(--bgOrange);
     color: black;
@@ -175,7 +268,7 @@ a{
 
 .junaid {
     width: 260px;
-    z-index: -1; 
+    z-index: -1;
     /* border-radius: 50px; */
 }
 
@@ -193,11 +286,13 @@ a{
         filter: grayscale(0);
         transform: scale(1);
     }
+
     50% {
         transform: scale(1.1);
         filter: grayscale(1);
         box-shadow: 3px 3px 10px black;
     }
+
     100% {
         transform: scale(1);
         filter: grayscale(0);
@@ -210,7 +305,7 @@ a{
     right: 0;
     animation-name: dots-animation;
     animation-duration: 4s;
-    animation-iteration-count: infinite; 
+    animation-iteration-count: infinite;
 }
 
 @keyframes dots-animation {
@@ -224,7 +319,7 @@ a{
 
     100% {
         transform: translateY(0px);
-    }  
+    }
 }
 
 .icon-cube {
@@ -240,10 +335,12 @@ a{
     0% {
         transform: rotateY(0deg) translateY(0px);
     }
-    50%{
+
+    50% {
         transform: rotateY(180deg) translateY(-12px);
     }
-    100%{
+
+    100% {
         transform: rotateY(360deg) translateY(0px);
     }
 }
@@ -259,7 +356,7 @@ a{
 }
 
 @keyframes cicle-animation {
-    50%{
+    50% {
         left: 5%;
         bottom: 10%;
     }
@@ -276,8 +373,8 @@ a{
     animation-timing-function: ease-in;
 }
 
-@keyframes zigzag-animation {   
-    50%{
+@keyframes zigzag-animation {
+    50% {
         left: 5%;
         top: 2%;
     }
@@ -295,7 +392,7 @@ a{
 }
 
 @keyframes plus-animation {
-    50%{
+    50% {
         left: 47%;
         top: 3%;
     }
@@ -306,7 +403,7 @@ a{
 
 /* PROJECT SECTION */
 .project-section {
-    background-color: rgb(231,231,231);
+    background-color: rgb(231, 231, 231);
     margin-top: 4rem;
 }
 
@@ -375,7 +472,7 @@ a{
     position: absolute;
     font-size: 200px;
     font-weight: 600;
-    color: rgb(255,255,255);
+    color: rgb(255, 255, 255);
     z-index: 10;
     /* display: none; */
     opacity: 0;
@@ -413,6 +510,7 @@ a{
 .project-content-left {
     left: 10%;
 }
+
 .project-content-right {
     right: 10%;
 }
@@ -446,6 +544,7 @@ a{
     gap: 0.9rem;
     align-items: center;
 }
+
 /* .btn-project:hover {
     border: none;
 } */
@@ -461,21 +560,24 @@ a{
     color: var(--bgOrange);
 }
 
-.project-card:hover .project-content{
-    transform:scale(1.1);
+.project-card:hover .project-content {
+    transform: scale(1.1);
 }
 
-#project1{
+#project1 {
     background-image: url(./images/projects/Project1.png);
 }
-#project2{
+
+#project2 {
     background-image: url(./images/projects/Project2.png);
     margin-left: 120px;
 }
-#project3{
+
+#project3 {
     background-image: url(./images/projects/Project3.png);
 }
-#project4{
+
+#project4 {
     background-image: url(./images/projects/Project4.png);
     margin-left: 120px;
 }
@@ -509,7 +611,7 @@ a{
 .skill-fade-text {
     font-size: 12em;
     /* font-style: bold; */
-    color: rgb(231,231,231);
+    color: rgb(231, 231, 231);
     bottom: -34.5%;
     right: -10%;
     user-select: none;
@@ -561,135 +663,139 @@ a{
     text-align: justify;
 }
 
-.skill-subHeading p{
+.skill-subHeading p {
     margin-top: 20px;
 }
 
 /* contact-us section */
-.contactus-form-container{
-    width:100%;
-    background-color: rgb(231,231,231);
-  }
-  
-.contactus-heading{
-    font-size:5em;
-    color:var(--bgOrange);
+.contactus-form-container {
+    width: 100%;
+    background-color: rgb(231, 231, 231);
+}
+
+.contactus-heading {
+    font-size: 5em;
+    color: var(--bgOrange);
     padding-top: 2rem;
 }
-  
-.contactus-sub-heading{
-    font-size:3rem;
-    color:#343d68aa;
+
+.contactus-sub-heading {
+    font-size: 3rem;
+    color: #343d68aa;
     text-transform: capitalize;
 }
-  
-.form-container{
-    margin-top:25px;
-    display:flex;
+
+.form-container {
+    margin-top: 25px;
+    display: flex;
     align-items: center;
     justify-content: center;
 }
-  
-.form{
-    display:flex;
+
+.form {
+    display: flex;
     flex-direction: column;
     justify-items: center;
     align-items: center;
-    gap:30px;
-    width:70%;
+    gap: 30px;
+    width: 70%;
     margin: 2rem 5rem;
 }
-  
-.formfield-container{
-    width:100%;
+
+.formfield-container {
+    width: 100%;
 }
-  
-.formfield{
-    width:100%;
-    height:42px;
+
+.formfield {
+    width: 100%;
+    height: 42px;
     padding: 0 2rem;
-    font-size:18px;
+    font-size: 18px;
     border-radius: 5px;
     box-shadow: 2px 2px 10px #1f1f1f;
-    font-weight:500;
-    border:none;
-    margin-top:27px;
+    font-weight: 500;
+    border: none;
+    margin-top: 27px;
 }
-  
-.formfield-textarea{
-    height:auto;
-    padding-top:1rem;
+
+.formfield-textarea {
+    height: auto;
+    padding-top: 1rem;
 }
-  
-#submit-btn{
-    border:none;
+
+#submit-btn {
+    border: none;
     font-size: 1.4rem;
     margin: 1rem 0;
 }
-  
-#submit-btn:hover{
-    scale:0.9;
+
+#submit-btn:hover {
+    scale: 0.9;
 }
-  
-.submit-icon{
-    padding:0 1rem;
-    font-size:1.5rem;
+
+.submit-icon {
+    padding: 0 1rem;
+    font-size: 1.5rem;
 }
-  
-footer{
-    position:relative;
-    margin-top:-1px;
+
+footer {
+    position: relative;
+    margin-top: -1px;
     background-color: #343d68;
-    padding:5rem;
+    padding: 5rem;
 }
-  
-.footer-wrapper{
-    display:flex;
-    gap:1rem;
-    padding:1.2rem;
+
+.footer-wrapper {
+    display: flex;
+    gap: 1rem;
+    padding: 1.2rem;
     justify-content: space-between;
-    align-items:center;
+    align-items: center;
 }
-  
-.footer-faded-text{
-    position:absolute;
-    left:0;
-    bottom:0;color:#535c87;
-    user-select:none;
-    font-size:5em;
+
+.footer-faded-text {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    color: #535c87;
+    user-select: none;
+    font-size: 5em;
 }
-  
-.link-wrapper{
-    display:flex;
-    gap:1.2rem;
+
+.link-wrapper {
+    display: flex;
+    gap: 1.2rem;
 }
-  
-.link-wrapper div a{
-    color:white;
-    text-decoration:none;
-    transition:all 0.6s;
+
+.link-wrapper div a {
+    color: white;
+    text-decoration: none;
+    transition: all 0.6s;
 }
-  
-.link-wrapper div a:hover{
-    color:var(--bgOrange);
+
+.link-wrapper div a:hover {
+    color: var(--bgOrange);
 }
-  
-.icon-wrapper{
-    display:flex;
-    gap:1rem;
+
+.icon-wrapper {
+    display: flex;
+    gap: 1rem;
 }
 
 
-@media (max-width: 800px){
+@media (max-width: 800px) {
     .introduction {
         flex-direction: column;
     }
+
     .footer-faded-text {
         display: none;
     }
+
     .footer-wrapper {
         flex-direction: column;
     }
+
     .link-wrapper {
         margin-bottom: 3rem;
     }
@@ -703,78 +809,146 @@ footer{
     .skill-container-left {
         width: 100%;
     }
+
     .skill-container-right {
         width: 100%;
     }
-    
+
+    .menu-button-container {
+        display: flex;
+    }
+
+    .menu {
+        position: absolute;
+        top: 0;
+        margin-top: 100px;
+        left: 0;
+        gap: 0;
+        flex-direction: column;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        z-index: 100;
+    }
+
+    #menu-toggle~.menu div {
+        height: 0;
+        margin: 0;
+        padding: 0;
+        border: 0;
+        transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    }
+
+    #menu-toggle:checked~.menu div {
+        /* border: 1px solid #333; */
+        height: 2.5em;
+        padding: 0.5em;
+        transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    }
+
+    .menu>div {
+        display: flex;
+        justify-content: center;
+        margin: 0;
+        padding: 0.5em 0;
+        width: 100%;
+        /* color: black; */
+        background-color: rgba(245, 245, 245, 0.8);
+    }
+
+    .menu div a {
+        color: black;
+    }
+
+    .menu div a:hover {
+        font-weight: bold;
+    }
+
+
 }
 
+
+
 @media (max-width: 480px) {
-    
+
 
     .skills-logo {
         width: 30px;
     }
+
     .blob-style {
         width: 90%;
     }
-    
+
 }
 
 /* responsiveness */
 @media (max-width:1300px) {
     .page-header {
-      padding-top: 30px;
-      color: var(--bgOrange);
-      text-align: center;
-      font-size: 40px;
+        padding-top: 30px;
+        color: var(--bgOrange);
+        text-align: center;
+        font-size: 40px;
     }
+
     .project-container {
-      padding: 5px;
-      margin: 10px;
-      gap: 60px;
+        padding: 5px;
+        margin: 10px;
+        gap: 60px;
     }
+
     .project-card {
-      width: 100%;
-      height: 300px;
+        width: 100%;
+        height: 300px;
     }
+
     .project-card {
-      background-size: cover;
-      background-position: center;
+        background-size: cover;
+        background-position: center;
     }
+
     .project-content {
-      scale: 0.5;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      top: 0;
+        scale: 0.5;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        top: 0;
     }
+
     .project-content-left {
-      left: 0;
+        left: 0;
     }
+
     .project-heading {
-      font-size: 40px;
-      width: 100%;
+        font-size: 40px;
+        width: 100%;
     }
+
     .project-sub-heading {
-      width: 100%;
+        width: 100%;
     }
+
     #project2 {
-      margin-left: 0;
+        margin-left: 0;
     }
+
     #project4 {
-      margin-left: 0;
+        margin-left: 0;
     }
+
     .project-skill-container {
-      width: 100%;
+        width: 100%;
     }
+
     .project-skill {
-      width: 35px;
+        width: 35px;
     }
+
     .project-card:hover .project-number {
-      display: none;
+        display: none;
     }
+
     .project-card:hover .project-content {
-      scale: 0.55;
+        scale: 0.55;
     }
 }
