--- a/styles.css
+++ b/styles.css
@@ -404,20 +404,20 @@ a {
 
 
 /* PROJECT SECTION */
-.project-section {
+/* .project-section {
     background-color: rgb(231, 231, 231);
     margin-top: 4rem;
-}
+} */
 
 .page-header {
     font-size: 90px;
     /* font-weight: ; */
     text-align: center;
-    color: var(--bgOrange);
+    color: white;
     padding: 30px;
 }
 
-.project-container {
+/* .project-container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 3rem 0;
@@ -426,6 +426,12 @@ a {
     display: flex;
     flex-direction: column;
     gap: 120px;
+} */
+.project-card-holder {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;    
 }
 
 
@@ -435,7 +441,7 @@ a {
     /* background-image: url(./images/projects/Project4.png); */
     background-size: cover;
     position: relative;
-    box-shadow: 0px 0px 40px #1f1f1f;
+    box-shadow: 0px 0px 40px #000;
     /* background-repeat: no-repeat; */
 }
 
@@ -472,50 +478,45 @@ a {
 
 .project-number {
     position: absolute;
-    font-size: 200px;
+    font-size: 100px;
     font-weight: 600;
     color: rgb(255, 255, 255);
     z-index: 10;
-    /* display: none; */
     opacity: 0;
     transition: all 0.4s;
 }
 
 .project-card:hover .project-number {
-    /* display: block; */
     opacity: 1;
 }
 
 .project-number-right {
-    right: -40px;
-    top: -45px;
+    right: -30px;
+    top: -55px;
 }
 
-.project-number-left {
-    left: -40px;
-    top: -45px;
-}
+
+
+
 
 .project-content {
     position: absolute;
     display: flex;
     flex-direction: column;
     color: white;
-    /* margin: ; */
     padding: 2em;
     bottom: 20%;
     z-index: 5;
     gap: 1em;
     transition: all 0.4s;
+    text-align: start;
+    justify-content: center;
 }
 
 .project-content-left {
     left: 10%;
 }
 
-.project-content-right {
-    left: 20%;
-}
 
 
 .project-skills-container {
@@ -526,11 +527,11 @@ a {
 }
 
 .project-skill {
-    width: 40px;
+    width: 35px;
 }
 
 .project-heading {
-    font-size: 50px;
+    font-size: 44px;
     font-weight: bold;
     line-height: 3rem;
 }
@@ -541,6 +542,40 @@ a {
     font-size: 16px;
     font-style: italic;
 }
+
+/* project- carousel */
+#testimonials {
+    text-align: center;
+    background-color: #161D29;
+    color: white;
+}
+
+.carousel-item {
+    padding: 7% 15%;   
+}
+
+
+.testimonial-text {
+    font-family: 'Montserrat', sans-serif ;
+    font-size: 2.2rem;
+    line-height: 1.5;
+}
+
+
+.testimonial-image {
+    border-radius: 100%;
+    width: 200px;
+    margin: 40px;
+}
+
+
+
+
+
+
+
+
+
 
 .btn-grp {
     display: flex;
@@ -569,11 +604,12 @@ a {
 
 #project1 {
     background-image: url(./images/projects/project_1.png);
+    
 }
 
 #project2 {
     background-image: url(./images/projects/project_2.png);
-    margin-left: 120px;
+    
 }
 
 #project3 {
@@ -582,7 +618,6 @@ a {
 
 #project4 {
     background-image: url(./images/projects/project_4.png);
-    margin-left: 120px;
 }
 
 #project5 {
@@ -894,7 +929,7 @@ footer {
 @media (max-width:1300px) {
     .page-header {
         padding-top: 30px;
-        color: var(--bgOrange);
+        color: white;
         text-align: center;
         font-size: 40px;
     }
@@ -974,3 +1009,5 @@ footer {
         right: -4rem;
     }
 }
+
+
