latest project added.

--- a/styles.css
+++ b/styles.css
@@ -623,6 +623,9 @@ a {
 #project5 {
     background-image: url(./images/projects/project_5.jpg);
 }
+#project6 {
+    background-image: url(./images/projects//students-3518726_1280.jpg);
+}
 
 
 
